# unshortenme-sdk

./: AGENTS.md  CHANGELOG.md  CLAUDE.md  LICENSE  Makefile  README.md  SECURITY.md
.sdk/: package-lock.json  package.json
go/: AGENTS.md  CLAUDE.md  README.md  REFERENCE.md  go.mod  unshortenme.go
go-cli/: .gitignore  Makefile  README.md  go.mod  main.go  words.go
go-mcp/: .gitignore  Makefile  README.md  go.mod  main.go  tools.go
lua/: AGENTS.md  CLAUDE.md  README.md  REFERENCE.md  config.lua  features.lua  unshortenme.rockspec  unshortenme_sdk.lua  unshortenme_types.lua
php/: AGENTS.md  CLAUDE.md  README.md  REFERENCE.md  composer.json  config.php  features.php  unshortenme_sdk.php
py/: AGENTS.md  CLAUDE.md  README.md  REFERENCE.md  config.py  features.py  pyproject.toml  unshortenme_sdk.py  unshortenme_types.py
py/core/: context.py  error.py  helpers.py  response.py  utility_type.py
py/entity/: unshorten_entity.py
py/feature/: audit_feature.py  cache_feature.py  clienttrack_feature.py  debug_feature.py  idempotency_feature.py  netsim_feature.py  proxy_feature.py  ratelimit_feature.py  streaming_feature.py  test_feature.py  timeout_feature.py
py/test/: runner.py  test_exists.py  test_feature.py  test_netsim.py  test_pipeline.py  test_primary_utility.py  test_readme_examples.py  test_unshorten_direct.py  test_unshorten_entity.py
py/utility/: feature_init.py  fetcher.py  make_point.py  make_response.py  make_spec.py  make_url.py  param.py  prepare_auth.py  prepare_params.py  prepare_query.py  register.py  result_body.py  transform_request.py
(+412 files in other folders)
